# mvbep

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  mvbep_example.ipynb  pyproject.toml  requirements.txt
data/: df_post.csv  df_pre.csv
docs/: mvbep.html
docs/source/: conf.py  examples.rst  index.rst  mvbep.rst  usage.rst
mvbep/: __init__.py  __version__.py  developer.py  initializer.py  interpreter.py  mvbep.py  towt_utils.py  transformer.py  writer.py
mvbep/templates/: dev_temp.html  init_temp.html  quant_temp.html
